- reorganisation of the code with better separation between M and VM. - compatibility with SCaFFOLD framework - calculation of 2D interaction diagram (3D slices)

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,11 @@
 /ColumnDesign/mapZone_Mx=100_c=40H=16.txt
 /ColumnDesign/mapZone_Mx=200_c=40H=16.txt
 /.vs/ACE/v15
+/.vs/ACE
+/ColumnDesignCalc/bin
+/ColumnDesignCalc/obj
+/ColumnDesignCalcs/bin/Debug/netstandard2.0
+/ColumnDesignCalcs/obj
+/ColumnDesign/Resources/Corona - Rhythm of the Night.mp3
+/ColumnDesign/Resources/Disco.png
+/ColumnDesign/Resources/DiscoRed.png
