Global Parameter Change

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,6 @@
 /ColumnDesign/Resources/Corona - Rhythm of the Night.mp3
 /ColumnDesign/Resources/Disco.png
 /ColumnDesign/Resources/DiscoRed.png
+/BatchDesign/bin
+obj
+bin
