--- a/ColumnDesign/packages.config
+++ b/ColumnDesign/packages.config
@@ -8,6 +8,8 @@
   <package id="MathNet.Numerics" version="4.11.0" targetFramework="net472" />
   <package id="MIConvexHull" version="1.1.19.504" targetFramework="net461" />
   <package id="Microsoft.Maps.MapControl.WPF" version="1.0.0.3" targetFramework="net472" />
+  <package id="Rhino3dm" version="7.15.0" targetFramework="net472" />
+  <package id="Rhino3dmIO.Desktop" version="7.1.20343.9491" targetFramework="net472" />
   <package id="netDxf.netstandard" version="2.3.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="OxyPlot.Core" version="2.0.0" targetFramework="net472" />
