--- a/ColumnDesignCalcs/ColumnDesignCalcs.csproj
+++ b/ColumnDesignCalcs/ColumnDesignCalcs.csproj
@@ -8,24 +8,24 @@
     <PackageReference Include="CalcCoreStandard" Version="0.0.5" />
     <PackageReference Include="MathNet.Numerics" Version="4.11.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="System.Runtime" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="ETABSv17_To_ACE">
-      <HintPath>..\packages\ETABSColumnDesign_Plugin\ETABSv17_To_ACE.dll</HintPath>
+      <HintPath>..\ETABSv17_To_ACE.DLL</HintPath>
     </Reference>
     <Reference Include="ETABSv18_To_ACE">
-      <HintPath>..\packages\ETABSColumnDesign_Plugin\ETABSv18_To_ACE.dll</HintPath>
+      <HintPath>..\ETABSv18_To_ACE.DLL</HintPath>
     </Reference>
     <Reference Include="InteractionDiagram3D">
-      <HintPath>..\packages\InteractionDiagram3D\InteractionDiagram3D.dll</HintPath>
-      <Private>false</Private>
+      <HintPath>..\InteractionDiagram3D.DLL</HintPath>
     </Reference>
     <Reference Include="MWGeometry">
-      <HintPath>..\packages\MWGeometry\MWGeometry.dll</HintPath>
+      <HintPath>..\MWGeometry.DLL</HintPath>
     </Reference>
     <Reference Include="StructuralDrawing2D">
-      <HintPath>..\packages\StructuralDrawing2D\StructuralDrawing2D.dll</HintPath>
+      <HintPath>..\StructuralDrawing2D.DLL</HintPath>
     </Reference>
   </ItemGroup>
 
@@ -44,9 +44,9 @@
     </None>
   </ItemGroup>
 
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <MakeDir Directories="$(AppData)\Magma Works\Scaffold\Data" />
-    <Exec Command="xCopy &quot;$(ProjectDir)Data&quot; &quot;$(AppData)\Magma Works\Scaffold\Data&quot; /d" />
-  </Target>
+<!--  <Target Name="PostBuild" AfterTargets="PostBuildEvent">-->
+<!--    <MakeDir Directories="$(AppData)\Magma Works\Scaffold\Data" />-->
+<!--    <Exec Command="xCopy &quot;$(ProjectDir)Data&quot; &quot;$(AppData)\Magma Works\Scaffold\Data&quot; /d" />-->
+<!--  </Target>-->
 
 </Project>
